--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -7,10 +7,8 @@
     "url": "https://github.com/zowe/zlux-app-manager.git"
   },
   "scripts": {
-    "build:externals": "webpack --progress --config webpack.externals.js",
-    "start": "webpack --watch --progress",
-    "build": "ng build && npm run copy",
-    "copy": "cpx node_modules/requirejs/require.js web/",
+    "start": "ng build --watch",
+    "build": "ng build",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
