--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "ng build --watch",
-    "build": "ng build",
+    "build": "ng build && npm run copy",
+    "copy": "cpx node_modules/requirejs/require.js web/",
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
@@ -38,13 +39,13 @@
     "compression-webpack-plugin": "~10.0.0",
     "copy-webpack-plugin": "^12.0.2",
     "core-js": "~3.19.0",
+    "cpx": "^1.5.0",
     "css-loader": "~7.1.1",
     "exports-loader": "~5.0.0",
     "file-loader": "~6.2.0",
     "font-awesome": "~4.7.0",
     "html-loader": "~4.2.0",
     "html-webpack-plugin": "^5.6.0",
-    "html2canvas": "~1.3.2",
     "jquery": "~3.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "moment": "~2.29.4",
@@ -75,7 +76,6 @@
     "@babel/plugin-syntax-decorators": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@popperjs/core": "^2.11.8",
-    "cpx": "^1.5.0"
+    "@popperjs/core": "^2.11.8"
   }
 }
