--- a/virtual-desktop/.gitignore
+++ b/virtual-desktop/.gitignore
@@ -56,7 +56,7 @@ proxy.conf.json
 # System Files
 .DS_Store
 Thumbs.db
-
+.angular
 
 # This program and the accompanying materials are
 # made available under the terms of the Eclipse Public License v2.0 which accompanies
