--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -13,14 +13,11 @@
     "i18n": "ng-xi18n -p tsconfig.ngx-i18n.json --i18nFormat=xlf  --outFile=messages.xlf && xliffmerge -p xliffmerge.json",
     "lint": "tslint -c tslint.json \"src/**/*.ts\""
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.7",
+  "dependencies": {
     "@angular/animations": "~18.0.0",
     "@angular/cdk": "~18.0.0",
-    "@angular/cli": "~18.0.7",
     "@angular/common": "~18.0.0",
     "@angular/compiler": "~18.0.0",
-    "@angular/compiler-cli": "~18.0.0",
     "@angular/core": "~18.0.0",
     "@angular/forms": "~18.0.0",
     "@angular/localize": "~18.0.0",
@@ -28,54 +25,32 @@
     "@angular/platform-browser": "~18.0.0",
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
-    "@ngtools/webpack": "^18.0.0",
-    "@types/node": "^20.12.7",
-    "@types/xmldom": "0.1.29",
+    "@popperjs/core": "^2.11.8",
     "angular-l10n": "^16.0.0",
-    "angular2-template-loader": "~0.6.2",
-    "babel-loader": "^9.1.3",
     "bootstrap": "~5.3.2",
-    "codelyzer": "~6.0.2",
-    "compression-webpack-plugin": "~10.0.0",
-    "copy-webpack-plugin": "^12.0.2",
     "core-js": "~3.19.0",
-    "cpx": "^1.5.0",
-    "css-loader": "~7.1.1",
-    "exports-loader": "~5.0.0",
-    "file-loader": "~6.2.0",
     "font-awesome": "~4.7.0",
-    "html-loader": "~4.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "jquery": "~3.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
     "moment": "~2.29.4",
     "ngx-file-drop": "^16.0.0",
     "ngx-i18nsupport": "~0.17.1",
     "popper.js": "~1.14.7",
-    "postcss-loader": "^8.1.1",
     "requirejs": "~2.3.6",
     "rxjs": "~7.8.1",
-    "script-loader": "~0.7.2",
-    "source-map-loader": "~3.0.0",
-    "style-loader": "^4.0.0",
-    "to-string-loader": "^1.2.0",
-    "ts-loader": "~9.5.1",
-    "tslib": "~2.3.0",
-    "tslint": "~6.1.0",
-    "tslint-react": "~5.0.0",
+    "tslib": "^2.6.3",
     "typeface-roboto": "~1.1.13",
-    "typescript": "~5.4.5",
-    "url-loader": "~4.1.1",
-    "webpack": "~5.91.0",
-    "webpack-cli": "~5.1.4",
     "zone.js": "~0.14.4"
   },
-  "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-    "@babel/plugin-syntax-decorators": "^7.24.7",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@popperjs/core": "^2.11.8",
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^18.0.7",
+    "@angular/cli": "~18.0.7",
+    "@angular/compiler-cli": "~18.0.0",
+    "@ngtools/webpack": "^18.0.0",
+    "@types/node": "^20.12.7",
+    "@types/xmldom": "0.1.29",
+    "codelyzer": "~6.0.2",
+    "cpx": "^1.5.0",
+    "tslint": "~6.1.0",
+    "tslint-react": "~5.0.0",
+    "typescript": "~5.4.5"
   }
-}
+  }
