--- a/system-apps/web-browser-app/nodeServer/package.json
+++ b/system-apps/web-browser-app/nodeServer/package.json
@@ -14,5 +14,10 @@
     "@types/http-proxy": "^1.17.3",
     "@types/node": "8.10.59",
     "typescript": "~4.2.0"
-  }
+  },
+  "overrides": {
+    "http-proxy": {
+        "follow-redirects": ">=1.15.6"
+    }
+}
 }
