--- a/virtual-desktop/package.json
+++ b/virtual-desktop/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
     "@types/xmldom": "0.1.29",
+    "@types/node": "18.15.3",
     "@zlux/widgets": "git+https://github.com/zowe/zlux-widgets.git#feature/upgrade-angular",
     "angular-l10n": "~12.0.0",
     "angular2-template-loader": "~0.6.2",
